--- a/css/carouselskin/skin.css
+++ b/css/carouselskin/skin.css
@@ -44,6 +44,14 @@ height: 190px;
 margin-right:10px;
 }
 
+body.item .jcarousel-skin-tango .jcarousel-item {
+width: 384px;
+height: 585px;
+margin-right:10px;
+}
+
+
+
 #ss2010carousel .jcarousel-skin-tango .jcarousel-item {
 width: 120px;
 height: 185px;
